----------------------------------
[2009-02-01 Ver 0.37 -> 0.38]
- Added logic for the problem which session will be closed the case of redirect with location header.(thx nazo and naoto_is)
----------------------------------
[2009-01-28 Ver 0.36 -> 0.37]
- Added class 'Wizin_Cache'.
- Added function 'getContentsByHttp' in 'Wizin_Util_Web'.
- Changed function name from 'getPrefix' to 'salt'.
- Modified mobile optimize filter.
- Fixed bug about use 'foreach' to string variable.
----------------------------------
[2009-01-22 Ver 0.35 -> 0.36]
- Added input filter for mobile.
----------------------------------
[2009-01-08 Ver 0.34 -> 0.35]
- Fixed bug about class 'Wizin_Filter_Pictogram' not exists when 'WIZIN_PEAR_DIR' was not set in include_path.
- Modified set include path in 'Wizin_Core_Loader'.
- Updated pictogram filter.
- Added pictogram json data for nonmobile.
- Added 'typecast' emoji images.(special thanks 'TypeCast' project!)
----------------------------------
[2008-12-24 Ver 0.33 -> 0.34]
- Fixed bug about undefined constant when script called Wizin_Core_Loader without system.config.php .(thx suin)
----------------------------------
[2008-12-13 Ver 0.32 -> 0.33]
- Fixed bug about syntax error with method chain.(thx navi)
- Modified function '_advancedCheck' in 'Wizin_User' class.
- Fixed latent bug about include files in 'Wizin_Filter_Css'.
- Fixed bug about config file path.
----------------------------------
[2008-12-05 Ver 0.31 -> 0.32]
- Replaced mbstring.detect_order(from 'auto' to 'sjis-win,eucjp-win,jis,utf-8,ascii').
- Fixed bug about image resize filter with relative path.
- Fixed bug about image resize logic for PNG-24.
----------------------------------
[2008-12-04 Ver 0.30 -> 0.31]
- Replaced indent(from tab to space).
- Modified mobile pager. If part of pages is empty, skip this.
----------------------------------
[2008-11-14 Ver 0.29 -> 0.30]
- Deleted 'tidy_repair_string' in filterMobilePager.
- Modified page template name and view logic.